# SW2_Ex4

./: README.md
Ex4_SW2/: BfsIterator.hpp  Complex.cpp  Complex.hpp  DfsIterator.hpp  HeapIterator.hpp  InorderIterator.hpp  KaryTree.hpp  Node.hpp  PostorderIterator.hpp  PreorderIterator.hpp  Test.cpp  TestCounter.cpp  main.cpp  makefile  run_tests  tree
Sw2_Ex4/: BfsIterator.hpp  CMakeLists.txt  DfsIterator.hpp  HeapIterator.hpp  InorderIterator.hpp  KaryTree.hpp  Node.hpp  PostorderIterator.hpp  PreorderIterator.hpp  main.cpp
